security: JWT re-validation and CORS allowlist for execution, identity, notification
- Add JwtAuthenticationFilter to execution and notification services, matching
  the defense-in-depth pattern already added to proctoring/reporting.
- Require a valid JWT for all /api/v1/execution/** and /api/v1/notifications/**
  endpoints; actuator remains the only permitAll path.
- Fix wildcard CORS (with allowCredentials=true) in identity, execution, and
  notification services by switching to a configurable allowed-origins allowlist
  (SECURECODE_CORS_ALLOWED_ORIGINS).
- Add securecode.jwt.secret and securecode.cors.allowed-origins properties to
  execution, identity, notification, proctoring, and reporting application.ymls.

This completes the in-service JWT re-validation layer: every backend service
that handles non-public data now independently validates the JWT, closing the
single trust-boundary at the gateway.